k8s/flink/flink-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
  namespace: flink-namespace
  labels:
    app: flink-app
    component: jobmanager
spec:
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  selector:
    app: flink-app
    component: jobmanager
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: flink-taskmanager
  namespace: flink-namespace
  labels:
    app: flink-app
    component: taskmanager
spec:
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  selector:
    app: flink-app
    component: taskmanager
  clusterIP: None
